--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
     "http-errors": "^2.0.0",
-    "path": "^0.12.7"
+    "marked": "^4.1.1",
+    "path": "^0.12.7",
+    "slugify": "^1.6.5"
   }
 }
