--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "cookie-session": "^2.0.0",
+    "dompurify": "^2.4.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
     "http-errors": "^2.0.0",
+    "jsdom": "^20.0.1",
     "marked": "^4.1.1",
     "path": "^0.12.7",
     "slugify": "^1.6.5"
